padding and margin update in mobile view

--- a/style.css
+++ b/style.css
@@ -94,8 +94,8 @@ body {
   border-radius: 5%;
   max-width: none;
   max-height: none;
-  min-width: none;
-  min-height: none;
+  min-width: auto;
+  min-height: auto;
   width: calc(33.33% - 2rem);
   background-color: #fafafa;
   border: 1px solid hsl(0, 0%, 88%);
@@ -111,14 +111,54 @@ body {
 }
 
 .banner {
-  background-image: url("../images/bg/main-banner2.jpg");
+  background-image: url("../images/bg/main-banner.webp");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 10rem 2rem;
   box-shadow: 0 -20px 20px white inset;
+  height: 100vh;
 }
 
 
+@media (width <450px) {
+
+  .hero-heading {
+    line-height: 1;
+  }
+
+  .banner .block {
+    padding-top: 0;
+  }
+
+  .banner {
+    text-align: center;
+    background-image: none;
+    padding-block: 5rem 1rem;
+    max-height: auto;
+    min-height: auto;
+    height: auto;
+  }
+
+  .about {
+    padding-block: 2rem;
+  }
+
+  .service-card {
+    width: 90%;
+    height: fit-content;
+    aspect-ratio: auto;
+    padding-bottom: 1rem;
+  }
+
+  .why-choose-us-container {
+    padding-block: 2rem;
+
+  }
+
+
+
+
+}
 
 
 
