favicon icon add

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 }
 
 .banner {
-  background-image: url("../images/bg/main-banner.webp");
+  background-image: url("./images/bg/main-banner.webp");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 10rem 2rem;
