--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
   font-size: 1rem !important;
 }
 
+::selection {
+  color: white;
+  background-color: #2563eb;
+}
+
 html {
   min-width: 0;
 }
