--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
   background-color: #fafafa;
   border: 1px solid hsl(0, 0%, 88%);
   flex: none;
-  aspect-ratio: 1/1;
+  /* aspect-ratio: 1/1; */
   display: block;
   box-sizing: border-box;
   min-width: 20rem;
@@ -135,12 +135,7 @@ body {
   height: 100vh;
 }
 
-
-
-
-
 @media (width <450px) {
-
   .hero-heading {
     line-height: 1;
   }
@@ -150,9 +145,11 @@ body {
   }
 
   :has(> .block.hero) {
-    background-image: linear-gradient(to right,
+    background-image: linear-gradient(
+        to right,
         rgba(255, 255, 255, 0.925),
-        rgba(255, 255, 255, 0.541)),
+        rgba(255, 255, 255, 0.541)
+      ),
       url("./images/bg/main-banner.webp");
     background-size: cover;
     background-repeat: no-repeat;
@@ -183,9 +180,6 @@ body {
     padding-block: 2rem;
   }
 }
-
-
-
 
 @keyframes gradient-animation {
   from {
