--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ body {
 @media (width <450px) {
   .hero-heading {
     line-height: 1;
+    letter-spacing: -0.1rem;
   }
 
   .banner .block {
@@ -145,15 +146,16 @@ body {
   }
 
   :has(> .block.hero) {
-    background-image: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0.925),
-        rgba(255, 255, 255, 0.541)
-      ),
+    padding-bottom: 2rem;
+    background-image: linear-gradient(to right,
+        rgba(255, 255, 255, 0.925) 40%,
+        rgba(255, 255, 255, 0.26)),
       url("./images/bg/main-banner.webp");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0 0, -25rem 0;
+    background-position: 0 0, -20rem 0rem;
+    box-shadow: 0 -20px 20px white inset;
+
   }
 
   .banner {
